Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28094

Window function in expression in ORDER BY

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Blocker
    • Resolution: Fixed
    • 10.9.0, 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL), 10.8(EOL)
    • 10.7.4, 10.4.25, 10.5.16, 10.6.8
    • Optimizer
    • Linux jie-2 5.4.143-1-pve #1 SMP PVE 5.4.143-1 (Tue, 28 Sep 2021 09:10:37 +0200) x86_64 x86_64 x86_64 GNU/Linux

    Description

      PoC:

      SELECT EXISTS ( ( SELECT -1 ORDER BY AVG ( 2147483647 ) OVER ( ROWS BETWEEN UNBOUNDED PRECEDING AND 83 PRECEDING ) / 'x' ) ) ;
      

      report (compiled with ASAN):

      Thread pointer: 0x62b00015e218
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x7fd219e69880 thread_stack 0x5fc00
      ??:0(__interceptor_backtrace)[0x7cbadb]
      mysys/stacktrace.c:212(my_print_stacktrace)[0x2a86d37]
      sql/signal_handler.cc:0(handle_fatal_signal)[0x15af5d9]
      sigaction.c:0(__restore_rt)[0x7fd2406673c0]
      sql/field_conv.cc:205(set_field_to_null_with_conversions(Field*, bool))[0x158a63e]
      sql/item.cc:6796(Item::save_decimal_in_field(Field*, bool))[0x164caae]
      sql/item.cc:6812(Item::save_in_field(Field*, bool))[0x164ce5a]
      sql/sql_list.h:441(base_list_iterator::next_fast())[0x137f492]
      ??:0(Window_func_runner::exec(THD*, TABLE*, SORT_INFO*))[0x1380b36]
      sql/sql_window.cc:3013(Window_funcs_sort::exec(JOIN*, bool))[0x138110a]
      ??:0(Window_funcs_computation::exec(JOIN*, bool))[0x1383947]
      sql/sql_select.cc:29515(AGGR_OP::end_send())[0xe2fe7f]
      sql/sql_select.cc:20806(sub_select_postjoin_aggr(JOIN*, st_join_table*, bool))[0xdb6f23]
      sql/sql_select.cc:20642(do_select(JOIN*, Procedure*))[0xdc6a47]
      sql/sql_select.cc:4528(JOIN::exec())[0xdc344d]
      ??:0(subselect_single_select_engine::exec())[0x1952e44]
      sql/item_subselect.cc:858(Item_subselect::exec())[0x1927eda]
      sql/item_subselect.cc:1814(Item_exists_subselect::val_int())[0x193379d]
      sql/sql_type.cc:7502(Type_handler::Item_send_long(Item*, Protocol*, st_value*) const)[0x13548b2]
      sql/protocol.cc:1328(Protocol::send_result_set_row(List<Item>*))[0x920512]
      sql/sql_class.cc:3060(select_send::send_data(List<Item>&))[0xaf940a]
      sql/sql_select.cc:4615(JOIN::exec_inner())[0xdc7875]
      sql/sql_select.cc:4528(JOIN::exec())[0xdc344d]
      sql/sql_select.cc:5009(mysql_select(THD*, TABLE_LIST*, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*))[0xd4e4e9]
      sql/sql_select.cc:543(handle_select(THD*, LEX*, select_result*, unsigned long))[0xd4d74c]
      sql/sql_parse.cc:6252(execute_sqlcom_select(THD*, TABLE_LIST*))[0xc74411]
      sql/sql_parse.cc:3943(mysql_execute_command(THD*, bool))[0xc609ca]
      sql/sql_class.h:2734(THD::enter_stage(PSI_stage_info_v1 const*, char const*, char const*, unsigned int))[0xc4a67f]
      sql/sql_parse.cc:1894(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool))[0xc41baa]
      sql/sql_parse.cc:1404(do_command(THD*, bool))[0xc4b74c]
      sql/sql_connect.cc:1418(do_handle_one_connection(CONNECT*, bool))[0x111f9f3]
      sql/sql_connect.cc:0(handle_one_connection)[0x111f249]
      perfschema/pfs.cc:2203(pfs_spawn_thread)[0x1f3f9de]
      nptl/pthread_create.c:478(start_thread)[0x7fd24065b609]
      ??:0(clone)[0x7fd240371163]
       
      Trying to get some variables.
      Some pointers may be invalid and cause the dump to abort.
      Query (0x629000087238): SELECT EXISTS ( ( SELECT -1 ORDER BY AVG ( 2147483647 ) OVER ( ROWS BETWEEN UNBOUNDED PRECEDING AND 83 PRECEDING ) / 'x' ) )
      

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              fuboat Jingzhou Fu
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4h 20m
                  4h 20m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.